Correct the dynamic flags and align text. The dynamic flags needed to be based on the length of the events array, not it's existance.

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -67,6 +67,11 @@
   grid-template-columns: repeat(3, 1fr);
 }
 
+.eventsPlaceholder {
+  text-align: center;
+  grid-column: 1 / -1;
+}
+
 .imageWrapper {
   grid-area: image;
 }
